--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,14 +8,13 @@ importFrom(dplyr,if_else)
 importFrom(dplyr,select)
 importFrom(httr,GET)
 importFrom(httr,config)
-importFrom(httr,content)
 importFrom(httr,set_config)
+importFrom(httr,timeout)
 importFrom(httr,user_agent)
 importFrom(purrr,transpose)
 importFrom(rjson,fromJSON)
 importFrom(stats,runif)
 importFrom(stats,setNames)
-importFrom(stringr,str_detect)
 importFrom(tibble,as_tibble)
 importFrom(urltools,param_set)
 importFrom(utils,setTxtProgressBar)
