Simplify the definitions of some workhorses

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,7 @@ importFrom(httr,user_agent)
 importFrom(purrr,transpose)
 importFrom(rjson,fromJSON)
 importFrom(stats,runif)
-importFrom(stats,setNames)
 importFrom(tibble,as_tibble)
-importFrom(urltools,param_set)
+importFrom(urltools,"parameters<-")
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
