Add a nap control function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(get_data)
 export(get_meta)
+export(nap)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,if_else)
@@ -11,6 +12,7 @@ importFrom(httr,config)
 importFrom(httr,set_config)
 importFrom(httr,timeout)
 importFrom(httr,user_agent)
+importFrom(purrr,as_mapper)
 importFrom(purrr,transpose)
 importFrom(rjson,fromJSON)
 importFrom(stats,runif)
